Make RoutingGeneratorMock empty by default